# bookingSystemAPI

./: README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: items.py  locations.py  login.py  shift.py  users.py
app/core/: config.py  security.py
app/crud/: __init__.py  crud_item.py  crud_location.py  crud_shift.py  crud_user.py
app/db/: base.py  booking_system_database.db  session.py
app/models/: __init__.py  item.py  location.py  shift.py  user.py
app/schemas/: __init__.py  device.py  group.py  item.py  location.py  place.py  shift.py  user.py
app/utils/: utils.py
migrations/: env.py
migrations/versions/: 0c4a609192ef_create.py  1750c252de01_update.py  1c44b197bd61_create_database.py  24ae3505e539_create.py  46605c8e9834_create.py  4974d6d631a7_create_database.py  4e68a1ed6ba8_update3.py  52942f591e7e_create_model.py  75cea5d29b5b_add_location.py  78b30edced33_add_location.py  7aac6216a42c_create_database.py  9096ad5fa4b3_create.py  a15623864123_create_database.py  ab23cf5927a6_update2.py  b0f9ba96064e_create_database.py  b334c3c3abaf_create_model.py  ce1cf48959ee_change_user.py  d0cea22e6893_create_database.py  f626dfd05860_update4.py
